--- a/examples/template-zh.tex
+++ b/examples/template-zh.tex
@@ -6,33 +6,41 @@
 % available at http://www.latex-project.org/lppl/.
 
 
-\documentclass[11pt,a4paper,sans]{moderncv}   % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+\documentclass[10pt,a4paper,sans]{moderncv}   % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv 主题
-\moderncvstyle{casual}                        % 选项参数是 ‘casual’, ‘classic’, ‘oldstyle’ 和 ’banking’
-\moderncvcolor{blue}                          % 选项参数是 ‘blue’ (默认)、‘orange’、‘green’、‘red’、‘purple’ 和 ‘grey’
+\moderncvstyle{classic}                        % 选项参数是 ‘casual’, ‘classic’, ‘oldstyle’ 和 ’banking’
+\moderncvcolor{orange}                          % 选项参数是 ‘blue’ (默认)、‘orange’、‘green’、‘red’、‘purple’ 和 ‘grey’
 %\nopagenumbers{}                             % 消除注释以取消自动页码生成功能
 
 % 字符编码
 \usepackage[utf8]{inputenc}                   % 替换你正在使用的编码
+\usepackage{amssymb}
 \usepackage{CJKutf8}
 
-% 调整页面出血
-\usepackage[scale=0.75]{geometry}
-%\setlength{\hintscolumnwidth}{3cm}           % 如果你希望改变日期栏的宽度
+% 调整页面
+%\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.9]{geometry}
+\setlength{\hintscolumnwidth}{2.8cm}           % 如果你希望改变日期栏的宽度
 
 % 个人信息
-\name{小龙}{李}
-\title{简历题目 (可选项)}                     % 可选项、如不需要可删除本行
-\address{街道及门牌号}{邮编及城市}            % 可选项、如不需要可删除本行
-\phone[mobile]{+1~(234)~567~890}              % 可选项、如不需要可删除本行
-\phone[fixed]{+2~(345)~678~901}               % 可选项、如不需要可删除本行
-\phone[fax]{+3~(456)~789~012}                 % 可选项、如不需要可删除本行
-\email{xiaolong@li.com.cn}                    % 可选项、如不需要可删除本行
-\homepage{www.xialongli.com}                  % 可选项、如不需要可删除本行
-\extrainfo{附加信息 (可选项)}                 % 可选项、如不需要可删除本行
-\photo[64pt][0.4pt]{picture}                  % ‘64pt’是图片必须压缩至的高度、‘0.4pt‘是图片边框的宽度 (如不需要可调节至0pt)、’picture‘ 是图片文件的名字;可选项、如不需要可删除本行
-\quote{引言(可选项)}                          % 可选项、如不需要可删除本行
+\name{周}{立}
+\title{个人简历/RESUME}                     % 可选项、如不需要可删除本行
+\phone[mobile]{+86~136~3707~1255}              % 可选项、如不需要可删除本行
+\address{安徽省合肥市金寨路96号 中国科大 230026}            % 可选项、如不需要可删除本行
+%\phone[fixed]{+2~(345)~678~901}               % 可选项、如不需要可删除本行
+%\phone[fax]{+3~(456)~789~012}                 % 可选项、如不需要可删除本行
+\email{zhouli35@mail.ustc.edu.cn}                    % 可选项、如不需要可删除本行
+\homepage{home.ustc.edu.cn/$\sim$zhouli35/homepage/}                  % 可选项、如不需要可删除本行
+\social[github]{ LuanKuo157}                 % 可选项、如不需要可删除本行
+\extrainfo{性别　男 \\
+民族　汉 \\
+出生日期　1990/10/28 \\      
+籍贯　湖北黄冈 \\
+政治面貌　党员}                 % 可选项、如不需要可删除本行
+\photo[64pt][0.6pt]{picture}                  % ‘64pt’是图片必须压缩至的高度、‘0.4pt‘是图片边框的宽度 (如不需要可调节至0pt)、’picture‘ 是图片文件的名字;可选项、如不需要可删除本行
+\quote{求职意向/Objective\\
+Seeking a position in solid geophysics or geophysical prospecting that offer stability and growth opportunities in a dynamic organization.}                          % 可选项、如不需要可删除本行
 
 % 显示索引号;仅用于在简历中使用了引言
 %\makeatletter
@@ -50,69 +58,80 @@
 \maketitle
 
 \section{教育背景}
-\cventry{年 -- 年}{学位}{院校}{城市}{\textit{成绩}}{说明}  % 第3到第6编码可留白
-\cventry{年 -- 年}{学位}{院校}{城市}{\textit{成绩}}{说明}
+\cventry{2009.9 -- 2013.7 }{地球物理学学士}{长安大学地质工程和测绘学院}{西安}{\textit{成绩专业前10\%}}{毕业论文　\textbf{地震早期预警中的实时动态定位研究} 导师：白超英　教授}
+\cventry{2013.9 -- 至今}{地球物理学硕士}{中国科学技术大学地球和空间科学学院}{合肥}{}{研究方向 \textbf{波动方程层析成像　全波形反演　数据处理　震源机制反演}　导师：张伟　教授} 
 
-\section{毕业论文}
-\cvitem{题目}{\emph{题目}}
-\cvitem{导师}{导师}
-\cvitem{说明}{\small 论文简介}
+\section{主要实习及工作经历}
+\cvlistitem{2013.7 -- 2013.8 武汉金钥匙教育　高中暑期培训班　班主任}
+\cvlistitem{2014.9 -- 2015.1　中国科学技术大学 勘探地震学进展　助教}
+%\section{毕业论文}
+%\cvitem{题目}{\emph{题目}}
+%\cvitem{导师}{导师}
+%\cvitem{说明}{\small 论文简介}
+%
+%\section{工作背景}
+%\subsection{专业}
+%\cventry{年 -- 年}{职位}{公司}{城市}{}{不超过1--2行的概况说明\newline{}%
+%工作内容:%
+%\begin{itemize}%
+%\item 工作内容 1;
+%\item 工作内容 2、 含二级内容:
+%  \begin{itemize}%
+%  \item 二级内容 (a);
+%  \item 二级内容 (b)、含三级内容 (不建议使用);
+%    \begin{itemize}
+%    \item 三级内容 i;
+%    \item 三级内容 ii;
+%    \item 三级内容 iii;
+%    \end{itemize}
+%  \item 二级内容 (c);
+%  \end{itemize}
+%\item 工作内容 3。
+%\end{itemize}}
+%\cventry{年 -- 年}{职位}{公司}{城市}{}{说明行1\newline{}说明行2}
+%\subsection{其他}
+%\cventry{年 -- 年}{职位}{公司}{城市}{}{说明}
 
-\section{工作背景}
-\subsection{专业}
-\cventry{年 -- 年}{职位}{公司}{城市}{}{不超过1--2行的概况说明\newline{}%
-工作内容:%
-\begin{itemize}%
-\item 工作内容 1;
-\item 工作内容 2、 含二级内容:
-  \begin{itemize}%
-  \item 二级内容 (a);
-  \item 二级内容 (b)、含三级内容 (不建议使用);
-    \begin{itemize}
-    \item 三级内容 i;
-    \item 三级内容 ii;
-    \item 三级内容 iii;
-    \end{itemize}
-  \item 二级内容 (c);
-  \end{itemize}
-\item 工作内容 3。
-\end{itemize}}
-\cventry{年 -- 年}{职位}{公司}{城市}{}{说明行1\newline{}说明行2}
-\subsection{其他}
-\cventry{年 -- 年}{职位}{公司}{城市}{}{说明}
+\section{个人技能}
+\subsection{语言技能}
+\cvlistdoubleitem{英语 CET-6 2010.12　分数497} 
+{可以基本无障碍的口语交流，有英文写作、报告和答辩的经历，并有一次英文专业会议的同声传译经历}
+%cvitemwithcomment{语言 2}{水平}{评价}
+%cvitemwithcomment{语言 3}{水平}{评价}
 
-\section{语言技能}
-\cvitemwithcomment{语言 1}{水平}{评价}
-\cvitemwithcomment{语言 2}{水平}{评价}
-\cvitemwithcomment{语言 3}{水平}{评价}
+\subsection{计算机技能}
+\cvlistdoubleitem{2010年通过计算机二级(C)}{掌握Fortran,C,Matlab,HTML,Shell,Python脚本等编程语言，略通MPI并行计算}
+\cvlistdoubleitem{熟悉linux操作和服务器运维}{熟悉office办公软件，掌握latex文档编辑的基本操作}
+\cvlistdoubleitem{地震勘探数据处理软件Geotomo, Vista基本操作}{熟悉SAC,GMT,Surfer,Grapher等软件的使用}
+\section{荣誉奖励}
+\cvitemwithcomment{2010年 10月}{国家励志奖学金}{奖项级别:国家级}
+\cvitemwithcomment{2011年 10月}{国家励志奖学金}{奖项级别:国家级}
+\cvitemwithcomment{2012年 10月}{国家励志奖学金}{奖项级别:国家级}
+\cvitemwithcomment{2013年 04月}{全国大学生数学竞赛国家三等奖}{奖项级别:国家级}
+\cvitemwithcomment{2013年 06月}{长安大学优秀毕业生}{奖项级别:院校级}
+\cvitemwithcomment{2015年 06月}{东方杯全国大学生勘探地球物理大赛国家三等奖}{奖项级别:国家级}
+~~~~~~~\small{其他体育、书法类等小奖项不一一列举。}
+\section{兴趣爱好}
+\renewcommand{\listitemsymbol}{*}             % 改变列表符号
+\cvlistdoubleitem{跑步}{ 参加横店、合肥马拉松}
+\cvlistdoubleitem{篮球,硬笔书法}{喜欢关注Github 开源软件项目}
+\section{自我评价}
+本人性格稳重、温和有活力，待人真诚，有一定的团队组织和协作能力。研究生期间除了自己的科研工作外还负责了组内大多数出差、外业以及
+参会等事项，纪律性强，工作认真负责。有较强的抗压能力，研究生期间的研究方向是一个难度较大且耗时长的课题，但始终坚持要有始有终，做出结果。
 
-\section{计算机技能}
-\cvdoubleitem{类别 1}{XXX, YYY, ZZZ}{类别 4}{XXX, YYY, ZZZ}
-\cvdoubleitem{类别 2}{XXX, YYY, ZZZ}{类别 5}{XXX, YYY, ZZZ}
-\cvdoubleitem{类别 3}{XXX, YYY, ZZZ}{类别 6}{XXX, YYY, ZZZ}
 
-\section{个人兴趣}
-\cvitem{爱好 1}{\small 说明}
-\cvitem{爱好 2}{\small 说明}
-\cvitem{爱好 3}{\small 说明}
+%\renewcommand{\listitemsymbol}{-}             % 改变列表符号
 
-\section{其他 1}
-\cvlistitem{项目 1}
-\cvlistitem{项目 2}
-\cvlistitem{项目 3}
-
-\renewcommand{\listitemsymbol}{-}             % 改变列表符号
-
-\section{其他 2}
-\cvlistdoubleitem{项目 1}{项目 4}
-\cvlistdoubleitem{项目 2}{项目 5\cite{book1}}
-\cvlistdoubleitem{项目 3}{}
+%\section{其他 2}
+%\cvlistdoubleitem{项目 1}{项目 4}
+%\cvlistdoubleitem{项目 2}{项目 5\cite{book1}}
+%\cvlistdoubleitem{项目 3}{}
 
 % 来自BibTeX文件但不使用multibib包的出版物
 %\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}% BibTeX的数字标签
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{publications}                    % 'publications' 是BibTeX文件的文件名
+%\nocite{*}
+%\bibliographystyle{plain}
+%\bibliography{publications}                    % 'publications' 是BibTeX文件的文件名
 
 % 来自BibTeX文件并使用multibib包的出版物
 %\section{出版物}
