--- a/examples/template-zh.tex
+++ b/examples/template-zh.tex
@@ -24,13 +24,13 @@
 \setlength{\hintscolumnwidth}{2.8cm}           % 如果你希望改变日期栏的宽度
 
 % 个人信息
-\name{周}{立}
+\name{Your}{Name}
 \title{个人简历/RESUME}                     % 可选项、如不需要可删除本行
-\phone[mobile]{+86~136~3707~1255}              % 可选项、如不需要可删除本行
+\phone[mobile]{+86~136~6666~6666}              % 可选项、如不需要可删除本行
 \address{安徽省合肥市金寨路96号 中国科大 230026}            % 可选项、如不需要可删除本行
 %\phone[fixed]{+2~(345)~678~901}               % 可选项、如不需要可删除本行
 %\phone[fax]{+3~(456)~789~012}                 % 可选项、如不需要可删除本行
-\email{zhouli35@mail.ustc.edu.cn}                    % 可选项、如不需要可删除本行
+\email{????@mail.ustc.edu.cn}                    % 可选项、如不需要可删除本行
 \homepage{home.ustc.edu.cn/$\sim$zhouli35/homepage/}                  % 可选项、如不需要可删除本行
 \social[github]{ LuanKuo157}                 % 可选项、如不需要可删除本行
 \extrainfo{性别　男 \\
@@ -58,7 +58,7 @@ Seeking a position in solid geophysics or geophysical prospecting that offer sta
 \maketitle
 
 \section{教育背景}
-\cventry{2009.9 -- 2013.7 }{地球物理学学士}{长安大学地质工程和测绘学院}{西安}{\textit{成绩专业前10\%}}{毕业论文　\textbf{地震早期预警中的实时动态定位研究} 导师：白超英　教授}
+\cventry{2009.9 -- 2013.7 }{地球物理学学士}{大学地质工程和测绘学院}{西安}{\textit{成绩专业前10\%}}{毕业论文　\textbf{地震早期预警中的实时动态定位研究} 导师：白超英　教授}
 \cventry{2013.9 -- 至今}{地球物理学硕士}{中国科学技术大学地球和空间科学学院}{合肥}{}{研究方向 \textbf{波动方程层析成像　全波形反演　数据处理　震源机制反演}　导师：张伟　教授} 
 
 \section{主要实习及工作经历}
@@ -116,8 +116,8 @@ Seeking a position in solid geophysics or geophysical prospecting that offer sta
 \cvlistdoubleitem{跑步}{ 参加横店、合肥马拉松}
 \cvlistdoubleitem{篮球,硬笔书法}{喜欢关注Github 开源软件项目}
 \section{自我评价}
-本人性格稳重、温和有活力，待人真诚，有一定的团队组织和协作能力。研究生期间除了自己的科研工作外还负责了组内大多数出差、外业以及
-参会等事项，纪律性强，工作认真负责。有较强的抗压能力，研究生期间的研究方向是一个难度较大且耗时长的课题，但始终坚持要有始有终，做出结果。
+本人????????????????????????????
+。
 
 
 %\renewcommand{\listitemsymbol}{-}             % 改变列表符号
